--- a/environment.yml
+++ b/environment.yml
@@ -5,95 +5,98 @@ channels:
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - ansi2html=1.9.1=py311hca03da5_0
-  - appnope=0.1.4=pyhd8ed1ab_1
-  - asttokens=3.0.0=pyhd8ed1ab_1
-  - blas=1.0=openblas
-  - blinker=1.9.0=py311hca03da5_0
-  - bottleneck=1.4.2=py311hb9f6ed7_0
-  - brotli-python=1.0.9=py311h313beb8_9
-  - bzip2=1.0.8=h80987f9_6
-  - ca-certificates=2025.4.26=hbd8a1cb_0
-  - certifi=2025.4.26=py311hca03da5_0
-  - charset-normalizer=3.3.2=pyhd3eb1b0_0
-  - click=8.1.8=py311hca03da5_0
-  - comm=0.2.2=pyhd8ed1ab_1
-  - dash=3.0.4=pyhd8ed1ab_0
-  - debugpy=1.8.11=py311h313beb8_0
-  - decorator=5.2.1=pyhd8ed1ab_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_1
-  - executing=2.2.0=pyhd8ed1ab_0
-  - flask=3.0.3=py311hca03da5_0
-  - flask-compress=1.13=py311hca03da5_0
-  - idna=3.7=py311hca03da5_0
-  - importlib-metadata=8.5.0=py311hca03da5_0
-  - ipykernel=6.29.5=pyh57ce528_0
-  - ipython=9.2.0=pyhfb0248b_0
-  - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
-  - itsdangerous=2.2.0=py311hca03da5_0
-  - jedi=0.19.2=pyhd8ed1ab_1
-  - jinja2=3.1.6=py311hca03da5_0
-  - jupyter_client=8.6.3=pyhd8ed1ab_1
-  - jupyter_core=5.7.2=pyh31011fe_1
-  - libcxx=14.0.6=h848a8c0_0
-  - libffi=3.4.4=hca03da5_1
-  - libgfortran=5.0.0=11_3_0_hca03da5_28
-  - libgfortran5=11.3.0=h009349e_28
-  - libopenblas=0.3.21=h269037a_0
-  - libsodium=1.0.18=h27ca646_1
-  - llvm-openmp=14.0.6=hc6e5704_0
-  - markupsafe=3.0.2=py311h80987f9_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
-  - narwhals=1.31.0=py311hca03da5_1
-  - ncurses=6.4=h313beb8_0
-  - nest-asyncio=1.6.0=py311hca03da5_0
-  - numexpr=2.10.1=py311h5d9532f_0
-  - numpy=2.0.1=py311he598dae_1
-  - numpy-base=2.0.1=py311hfbfe69c_1
-  - openssl=3.5.0=h81ee809_0
-  - packaging=24.2=py311hca03da5_0
-  - pandas=2.2.3=py311hcf29cfe_0
-  - parso=0.8.4=pyhd8ed1ab_1
-  - pexpect=4.9.0=pyhd8ed1ab_1
-  - pickleshare=0.7.5=pyhd8ed1ab_1004
-  - pip=25.0=py311hca03da5_0
-  - platformdirs=4.3.7=pyh29332c3_0
-  - plotly=6.0.1=py311hd096484_0
-  - prompt-toolkit=3.0.51=pyha770c72_0
-  - psutil=5.9.0=py311h80987f9_1
-  - ptyprocess=0.7.0=pyhd8ed1ab_1
-  - pure_eval=0.2.3=pyhd8ed1ab_1
-  - pygments=2.19.1=pyhd8ed1ab_0
-  - pysocks=1.7.1=py311hca03da5_0
-  - python=3.11.11=hb885b13_0
-  - python-dateutil=2.9.0post0=py311hca03da5_2
-  - python-tzdata=2023.3=pyhd3eb1b0_0
-  - pytz=2024.1=py311hca03da5_0
-  - pyzmq=26.2.0=py311h313beb8_0
-  - readline=8.2=h1a28f6b_0
-  - regex=2024.11.6=py311h80987f9_0
-  - requests=2.32.3=py311hca03da5_1
-  - retrying=1.3.3=pyhd3eb1b0_2
-  - setuptools=75.8.0=py311hca03da5_0
-  - six=1.17.0=py311hca03da5_0
-  - sqlite=3.45.3=h80987f9_0
-  - stack_data=0.6.3=pyhd8ed1ab_1
-  - tk=8.6.14=h6ba3021_0
-  - tornado=6.4.2=py311h80987f9_0
-  - traitlets=5.14.3=pyhd8ed1ab_1
-  - typing_extensions=4.12.2=py311hca03da5_0
-  - tzdata=2025a=h04d1e81_0
-  - urllib3=2.3.0=py311hca03da5_0
-  - wcwidth=0.2.13=pyhd8ed1ab_1
-  - werkzeug=3.0.6=py311hca03da5_0
-  - wheel=0.45.1=py311hca03da5_0
-  - xz=5.6.4=h80987f9_1
-  - zeromq=4.3.5=h313beb8_0
-  - zipp=3.21.0=py311hca03da5_0
-  - zlib=1.2.13=h18a0788_1
+  - ansi2html=1.9.1
+  - appnope=0.1.4
+  - asttokens=3.0.0
+  - blas=1.0
+  - blinker=1.9.0
+  - bottleneck=1.4.2
+  - brotli-python=1.0.9
+  - bzip2=1.0.8
+  - ca-certificates=2025.4.26
+  - certifi=2025.4.26
+  - charset-normalizer=3.3.2
+  - click=8.1.8
+  - comm=0.2.2
+  - dash=3.0.4
+  - debugpy=1.8.11
+  - decorator=5.2.1
+  - exceptiongroup=1.2.2
+  - executing=2.2.0
+  - flask=3.0.3
+  - flask-compress=1.13
+  - idna=3.7
+  - importlib-metadata=8.5.0
+  - ipykernel=6.29.5
+  - ipython=9.2.0
+  - ipython_pygments_lexers=1.1.1
+  - itsdangerous=2.2.0
+  - jedi=0.19.2
+  - jinja2=3.1.6
+  - jupyter_client=8.6.3
+  - jupyter_core=5.7.2
+  - libcxx=14.0.6
+  - libffi=3.4.4
+  - libgfortran=5.0.0
+  - libgfortran5=11.3.0
+  - libopenblas=0.3.21
+  - libsodium=1.0.18
+  - llvm-openmp=14.0.6
+  - markupsafe=3.0.2
+  - matplotlib-inline=0.1.7
+  - narwhals=1.31.0
+  - ncurses=6.4
+  - nest-asyncio=1.6.0
+  - numexpr=2.10.1
+  - numpy=2.0.1
+  - numpy-base=2.0.1
+  - openssl=3.5.0
+  - packaging=24.2
+  - pandas=2.2.3
+  - parso=0.8.4
+  - pexpect=4.9.0
+  - pickleshare=0.7.5
+  - pip=25.0
+  - platformdirs=4.3.7
+  - plotly=6.0.1
+  - prompt-toolkit=3.0.51
+  - psutil=5.9.0
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.3
+  - pygments=2.19.1
+  - pysocks=1.7.1
+  - python=3.11.11
+  - python-dateutil=2.9.0post0
+  - python-tzdata=2023.3
+  - pytz=2024.1
+  - pyzmq=26.2.0
+  - readline=8.2
+  - regex=2024.11.6
+  - requests=2.32.3
+  - retrying=1.3.3
+  - setuptools=75.8.0
+  - six=1.17.0
+  - sqlite=3.45.3
+  - stack_data=0.6.3
+  - tk=8.6.14
+  - tornado=6.4.2
+  - traitlets=5.14.3
+  - typing_extensions=4.12.2
+  - tzdata=2025a
+  - urllib3=2.3.0
+  - wcwidth=0.2.13
+  - werkzeug=3.0.6
+  - wheel=0.45.1
+  - xz=5.6.4
+  - zeromq=4.3.5
+  - zipp=3.21.0
+  - zlib=1.2.13
   - pip:
+      - attrs==25.3.0
       - dash-bootstrap-components==2.0.2
       - dash-bootstrap-templates==2.1.0
       - dash-mantine-components==1.2.0
+      - datefinder==0.7.3
       - gunicorn==23.0.0
+      - number-parser==0.3.2
 prefix: /Users/dgottschalk/miniconda3/envs/hauntedflights
